Revert "#3: try to fix 100vh for hero header on mobile"
This reverts commit 8a3888ebd76770b8a9ea0060caa613e59de0bd70.

--- a/website/src/assets/css/style.css
+++ b/website/src/assets/css/style.css
@@ -193,7 +193,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: calc(var(--vh) * 100);
+  height: 100vh;
   background: url("../img/hero-bg.png") bottom center;
   background-size: cover;
 }
