--- a/website/src/assets/scss/_hero.scss
+++ b/website/src/assets/scss/_hero.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: $_100vh;
+  height: 100vh;
   background: url("../img/hero-bg.png") bottom center;
   background-size: cover;
 
